CHATS_SIT/force-app/main/default/objects/sfrosit_t_indiv_emplmt_verif_hist__x/fields/dte_verif__c.field-meta.xml
<CustomField>
    <fullName>dte_verif__c</fullName>
    <description>dte_verif</description>
    <externalDeveloperName>dte_verif</externalDeveloperName>
    <label>verification date</label>
    <type>Date</type>
</CustomField>