CHATS_SIT/force-app/main/default/objects/sfrosit_t_indiv_emplmt_verif_hist__x/fields/idn_user_vrfyng__c.field-meta.xml
<CustomField>
    <fullName>idn_user_vrfyng__c</fullName>
    <description>idn_user_vrfyng</description>
    <externalDeveloperName>idn_user_vrfyng</externalDeveloperName>
    <label>User Verification ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>