CHATS_SIT/force-app/main/default/objects/sfrosit_t_indiv_emplmt_verif_hist__x/fields/idn_verif_emplmt_indiv__c.field-meta.xml
<CustomField>
    <fullName>idn_verif_emplmt_indiv__c</fullName>
    <description>idn_verif_emplmt_indiv</description>
    <externalDeveloperName>idn_verif_emplmt_indiv</externalDeveloperName>
    <label>Employment Verification ID</label>
    <length>50</length>
    <referenceTargetField>T_INDIV_EMPLMT_VERIF__c.IDN_EXTNL__c</referenceTargetField>
    <referenceTo>T_INDIV_EMPLMT_VERIF__c</referenceTo>
    <relationshipLabel>Employment Verification Legacy History</relationshipLabel>
    <relationshipName>sfrosit_t_indiv_emplmt_verif_hist</relationshipName>
    <type>IndirectLookup</type>
</CustomField>