CHATS_SIT/force-app/main/default/objects/sfrosit_t_indiv_emplmt_verif_hist__x/fields/idn_verif_emplmt_indiv_hist__c.field-meta.xml
<CustomField>
    <fullName>idn_verif_emplmt_indiv_hist__c</fullName>
    <description>idn_verif_emplmt_indiv_hist</description>
    <externalDeveloperName>idn_verif_emplmt_indiv_hist</externalDeveloperName>
    <label>Employment Verification History ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>